PR debug/57232 * var-tracking.c (vt_initialize): Apply the same condition to preserve the CFA base value.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208219 138bc75d-0d04-0410-961f-82ee72b054a4